--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,7 +51,19 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
-      &:hover {
+      aside.badge {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: red;
+        border-radius: 0px;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+      }
+
+            &:hover {
 
         border-color: #999;
 
