--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -8,6 +8,12 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">Jungle</a>
+      <% if current_user%>
+        <a class="navbar-brand" href="/logout">Log out</a>
+      <% elsif %>
+        <a class="navbar-brand" href="/login">Log in</a>
+        <a class="navbar-brand" href="/signup">Sign up</a>
+      <% end%>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
