--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,6 +2,22 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <% items = LineItem.where(order_id: @order.id) %>
+    
+
+    <% products_ids = items.map { |item| item.product_id } %>
+    
+    <% products = Product.find(products_ids) %>
+
+    <div class="products">
+      <%= render products %>
+    </div>
+
+    <% products.map do |product| %>
+      <%= product.name %>
+    <% end %>
+
+    
   </header>
 
   <div class="order-summary jumbotron">
