Enhancement: Order Details Assignment is working

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,28 +2,31 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
-    <% items = LineItem.where(order_id: @order.id) %>
-    
-
-    <% products_ids = items.map { |item| item.product_id } %>
-    
-    <% products = Product.find(products_ids) %>
-
-    <div class="products">
-      <%= render products %>
-    </div>
-
-    <% products.map do |product| %>
-      <%= product.name %>
-    <% end %>
-
-    
   </header>
+    
 
-  <div class="order-summary jumbotron">
+  <div class="panel panel-default items">
+
     <h4>Thank you for your order!</h4>
+    <h5>Email: <%= @order.email %></h5>
+    <h5>Total: <%= humanized_money_with_symbol @order.total_cents %></h5>
+
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Image</th> 
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+          <%= render 'order' %>
+      </tbody>
+    </table>
   </div>
 
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
+  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+  <br><br>
 </section>
