--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -40,13 +40,11 @@
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= cart_subtotal_cents %>"
           data-name="Jungle"
-          <%# data-description="Khurram Virani's Jungle Order"
-          data-locale="auto"
-          data-email="kvirani@gmail.com" %>
           data-description="Tony Kieling's Jungle Order"
           data-locale="auto"
           data-email="tony.kieling@gmail.com"
           data-currency="cad">
+          console.log("XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX")
         </script>
       <% end %>
     </div>
