Bug: Checking out with Empty Cart Assignment is working

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,14 @@
 <section class="cart-show">
 
+
+<% if enhanced_cart.length < 1 %>
+  <p class="empty-cart"> Your Cart is Empty.</p> 
+
+  <br>
+  <%= link_to "Please, let's start shopping!", :root %>
+  
+ <% else %>
+
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -49,5 +58,7 @@
       <% end %>
     </div>
   </div>
+
+<%end%>
 
 </section>
