step 5 is working

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,6 +23,21 @@
           <dt>Price</dt>
           <dd><%= @product.price %></dd>
         </dl>
+        <div>
+
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Comment</th> 
+              <th>Rating</th>
+              <th>Date</th>
+              <th>User_id</th>
+            </tr>
+          </thead>
+          <tbody>
+              <%= render "review" %>
+          </tbody>
+        </table>
       </div>
     </div>
 
