step 6 is working

--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -9,10 +9,11 @@
       <%= review.rating %>
     </td>
     <td>
-      <%= review.updated_at %>
+      <%= review.updated_at.to_formatted_s(:long) %>
     </td>
     <td>
-      <%= review.user_id %>
+      <% user_temp = User.where(id: review.user_id) %>
+      <%= "#{user_temp.first.first_name} #{user_temp.first.last_name}" %>
     </td>        
   </tr>
 <% end %>
