--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,7 +31,7 @@
               <th>Comment</th> 
               <th>Rating</th>
               <th>Date</th>
-              <th>User_id</th>
+              <th>User</th>
             </tr>
           </thead>
           <tbody>
