step 9, 10 and 11 are working

--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,3 +1,5 @@
+<%# @product.reviews.reverse.each do |review| %>
+
 <% reviews = Review.where(product_id: @product.id) %>
 <% reviews.each do |review| %>
   <tr>
