--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,11 +42,11 @@
         </table>
 
           <%= form_for :review, url: "/products/#{@product.id}/reviews" do |f| %>
-          Comment:<br><%= f.text_area :description %><br>
-          Rating:<%= f.select :rating, options_for_select(["1", "2", "3","4","5"])%><br>
+          Comment:<br><%= f.text_area :description %> <br>
+          Rating:<%= f.select :rating, options_for_select(["1", "2", "3","4","5"])%> <br>
           <%= f.submit "Submit" %>
           <%  end %>
-
+<%#byebug%>
       </div>
     </div>
 
