--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,12 +41,15 @@
           </tbody>
         </table>
 
-          <%= form_for :review, url: "/products/#{@product.id}/reviews" do |f| %>
-          Comment:<br><%= f.text_area :description %> <br>
-          Rating:<%= f.select :rating, options_for_select(["1", "2", "3","4","5"])%> <br>
-          <%= f.submit "Submit" %>
-          <%  end %>
-<%#byebug%>
+          <% if current_user%>
+          <%#byebug%>
+            <%= form_for :review, url: "/products/#{@product.id}/reviews" do |f| %>
+            Comment:<br><%= f.text_area :description %> <br>
+            Rating:<%= f.select :rating, options_for_select(["1", "2", "3","4","5"])%> <br>
+            <%= f.submit "Submit" %>
+            <%  end %>
+            <%end%>
+
       </div>
     </div>
 
